add odh,kmodel tasks

--- a/tekton/src/pipelines/gitops/deprovision-mas-aibroker-tenant.yml.j2
+++ b/tekton/src/pipelines/gitops/deprovision-mas-aibroker-tenant.yml.j2
@@ -34,6 +34,7 @@ spec:
   tasks:
     - name: run-gitops-deprovision-aibroker-tenant
       taskRef:
+        kind: Task
         name: gitops-deprovision-aibroker-tenant
       workspaces:
         - name: configs
