remove unwanted keys

--- a/tekton/src/pipelines/gitops/deprovision-mas-aibroker.yml.j2
+++ b/tekton/src/pipelines/gitops/deprovision-mas-aibroker.yml.j2
@@ -99,7 +99,7 @@ spec:
         - name: aibroker_instance_id
           value: $(params.aibroker_instance_id)
 
-   # 3.gitops-kmodel
+   # 3.gitops-deprovision-kmodel
     # -------------------------------------------------------------------------
     - name: run-gitops-deprovision-kmodel
       runAfter:
