update version details

--- a/tekton/src/tasks/gitops/gitops-deprovision-aibroker.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-deprovision-aibroker.yml.j2
@@ -80,6 +80,6 @@ spec:
         - -c
       name: gitops-deprovision-aibroker
       imagePullPolicy: IfNotPresent
-      image: quay.io/ibmmas/cli:13.27.0-pre.gitops-aibroker-cli
+      image: quay.io/ibmmas/cli:latest
   workspaces:
     - name: configs
