--- a/tekton/src/params/install-appchannels.yml.j2
+++ b/tekton/src/params/install-appchannels.yml.j2
@@ -32,3 +32,7 @@
   type: string
   description: Subscription channel for Facilities application operator
   default: ""
+- name: mas_app_channel_aiservice
+  type: string
+  description: Subscription channel for AI Service application operator
+  default: ""
