--- a/tekton/src/pipelines/gitops/gitops-mas-fvt-preparer-pipeline.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-fvt-preparer-pipeline.yml.j2
@@ -24,6 +24,8 @@ spec:
       type: string
     - name: mas_instance_id
       type: string
+    - name: aiservice_instance_id
+      type: string
     - name: pipeline_storage_class
       type: string
     - name: avp_aws_secret_region
@@ -201,6 +203,8 @@ spec:
           value: $(params.launcher_id)
         - name: mas_instance_id
           value: $(params.mas_instance_id)
+        - name: aiservice_instance_id
+          value: $(params.aiservice_instance_id)
         - name: pipeline_storage_class
           value: $(params.pipeline_storage_class)
         - name: aws_region
