--- a/tekton/src/tasks/gitops/gitops-mas-fvt-preparer.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-mas-fvt-preparer.yml.j2
@@ -89,6 +89,9 @@ spec:
     - name: mas_instance_id
       type: string
       default: ""
+    - name: aiservice_instance_id
+      type: string
+      default: ""
     - name: mas_workspace_id
       type: string
       default: ""
@@ -217,6 +220,8 @@ spec:
         value: $(params.mas_instance_id)
       - name: FVT_ENVIRONMENT
         value: $(params.mas_instance_id)
+      - name: AISERVICE_INSTANCE_ID
+        value: $(params.aiservice_instance_id)
       - name: PIPELINE_STORAGE_CLASS
         value: $(params.pipeline_storage_class)
       - name: AWS_REGION
@@ -569,7 +574,11 @@ spec:
             check_argo_app_healthy "${MASAPP_APP}" 120
             check_argo_app_healthy "${MAS_WORKSPACE_ID}.${MASAPP_APP}" 120
           fi
-
+          if [[ "$LAUNCHFVT_AISERVICE" == "true" ]]; then
+            MASAPP_APP="aiservice.${CLUSTER_NAME}.${AISERVICE_INSTANCE_ID}"
+            check_argo_app_healthy "${MASAPP_APP}" 140
+            check_argo_app_healthy "${MAS_WORKSPACE_ID}.${MASAPP_APP}" 140
+          fi
         fi
 
         echo '
